Change Eclipse settings

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
-#Fri Apr 12 21:14:02 JST 2013
 eclipse.preferences.version=1
 encoding//src/com/client9/libinjection/SQLParse.java=UTF-8
+encoding//src/main/java=UTF-8
+encoding//src/test/java=UTF-8
+encoding//src/test/resources=UTF-8
 encoding/<project>=UTF-8
